ietfdb (3.02)

  * Remove the per-document rescheduling dropdown boxes from the future iesg
    telechat document list (/iesg/agenda/documents/).  Fixes issue #346.

 -- Henrik Levkowetz <henrik@levkowetz.com>  21 Jul 2010 15:30:46 +0200

ietfdb (3.01)

  * Add a button to issue a ballot for documents which has entered IESG 
    processing but don't have a ballot yet.

  * Always make idinternal.docstate() return a string -- there are callers 
    that assume this, like the script which generates all_id2.

  * Don't fail with a server error (500) if a bad draft name (containing 
    for instance newlines) is entered -- just return a 404.

  * For WG charters under evaluation, show the year too, not only month and 
    day.  This will reveal bad date information in the charter files.

  * If we fail to parse the date of a WG charter under evaluation, use 1 
    Jan 1900, and carry on.  Don't fail with a server error.

 -- Henrik Levkowetz <henrik@levkowetz.com>  20 Jul 2010 18:41:31 +0200

ietfdb (3.00)

  * This release adds the IOLA port of the former Perl IESG datatracker to
    the Python/Django datatracker.  This should make most AD actions on
    drafts available through the Django datatracker, normally from the
    datatracker.ietf.org/doc/<draftname>/ page or from the /doc/ad/.../
    page, or expressed UI-wise: from the pages reached from the 'AD Dashboard'
    menu at the top of the lefthand menubar in the datatracker.  This
    includes actions such as:

    - Change draft state
    - Edit draft metadata
    - Defer ballot, undefer ballot
    - Handle ballot comments
    - Handle ballot writeups
    - Approve ballots
    - Initiate last call

    Secretariat staff actions supported through the Django datatracker now
    includes:

    - Manage telechat dates
    - Manage working group descriptions

    Tweaks to the new interface and capabilities will be releases with
    a short release cycle, as they are discovered and fixed over the next
    weeks.
