@@ -1,9 +1,9 @@
 # Copyright The IETF Trust 2007, All Rights Reserved
 
-__version__ = "3.03-dev"
+__version__ = "3.03"
 
 __date__    = "$Date$"
 
-__rev__     = "$Rev$ (dev) Latest release: Rev. 2370 "
+__rev__     = "$Rev$"
 
 __id__      = "$Id$"
