@@ -57,6 +57,7 @@ urlpatterns += patterns('',
         (r'^agenda/agenda_package.txt$', views.agenda_package),
         (r'^agenda/documents.txt$', views.agenda_documents_txt),
         (r'^agenda/documents/$', views.agenda_documents),
+        (r'^agenda/telechat-(?P<year>\d+)-(?P<month>\d+)-(?P<day>\d+)-docs.tgz', views.agenda_downloaddocstgz),
         (r'^discusses/$', views.discusses),
         (r'^telechatdates/$', views.telechat_dates),
         url(r'^wgactions/$', views.working_group_actions, name="iesg_working_group_actions"),
