@@ -82,6 +82,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <tr class="header"><td colspan="5"><a href="/iesg/agenda/">Full IESG Agenda</a></td></tr>
 {% endif %}
 
+<tr class="header"><td colspan="5"><a href="/iesg/agenda/telechat-{{t.date|date:"Y"}}-{{t.date|date:"m"}}-{{t.date|date:"d"}}-docs.tgz">Download Documents</a></td></tr>
+
 <tr class="header"><td colspan="5">2. Protocol Actions</td></tr>
 
 <tr class="header"><td colspan="5">2.1 WG Submissions</td></tr>
