@@ -14,6 +14,10 @@ table#wg-selector { border:1px solid black; border-collapse:collapse; }
 #wg-selector div.unselected { background-color: #FFFFFF; cursor: pointer; }
 #wg-selector td.inactive div { background-color: #EEEEEE; color: #808080; cursor:default;}
 #wg-selector.hidden { display: none; }
+#wg-selector-toggle-text { text-decoration: underline; cursor: pointer; }
+#wg-selector-triangle-right { vertical-align: text-top; }
+#wg-selector-triangle-down { vertical-align: text-top; }
+img.hidden { display: none; }
 
 .ietf-agenda-palette { border-collapse:collapse; border:2px solid black; background:white; overflow:hidden; }
 .ietf-agenda-palette td { border:1px solid black; }
@@ -150,13 +154,19 @@ table#wg-selector { border:1px solid black; border-collapse:collapse; }
   function toggle_wg_selector ()
   {
     var wg_selector = document.getElementById('wg-selector');
+    var triangle_right = document.getElementById('wg-selector-triangle-right');
+    var triangle_down = document.getElementById('wg-selector-triangle-down');
     if (wg_selector.className == 'hidden')
     {
       wg_selector.className = '';
+      triangle_right.className = 'hidden';
+      triangle_down.className = '';
     }
     else
     {
       wg_selector.className = 'hidden';
+      triangle_right.className = '';
+      triangle_down.className = 'hidden';
     }
   }
 </script>
@@ -176,7 +186,12 @@ Updated {{ update.updated|date:"Y-m-d H:i:s T" }}</p>
 {% load cache %}
 {% cache 900 ietf_meeting_agenda meeting.num %}
 
-<div class="noprint"><button onclick="toggle_wg_selector()" >Select working groups</button></div>
+You can customize the agenda below to show only selected working group sessions.  To be able to return to the customized view later, bookmark the resulting URL:
+<div class="noprint" onclick="toggle_wg_selector()">
+   <img id="wg-selector-triangle-right" src="/images/triangle-right.png" />
+   <img id="wg-selector-triangle-down" src="/images/triangle-down.png"/ class="hidden" >
+   <span id="wg-selector-toggle-text">Select working group sessions</style>
+</div>
 <table id="wg-selector" width="100%" class="hidden">
   <tr>
     {% for area in area_list %}
@@ -255,7 +270,11 @@ Updated {{ update.updated|date:"Y-m-d H:i:s T" }}</p>
       <tr id="agenda-{{meeting.num}}-{{slot.meeting_date|date:"D"|lower}}-{{slot.time_desc|slice:":4"}}-{{session.info.area|upper}}-{{session.info.acronym|lower}}" class="groupagenda">
         <td></td>
         <td colspan="3">
+	  {% if session.info.agenda_file %}
           <iframe width="100%" height="400px" src="http://www.ietf.org/proceedings/{{ session.info.agenda_file }}" onload="r(this)"></iframe>
+	  {% else %}
+	  <b>No Agenda Submitted</b>
+	  {% endif %}
         </td>
       </tr>
       {% endfor %}
