@@ -50,5 +50,19 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 {% endfor %}
 </table>
 
+{% regroup docs_related by view_sort_group as grouped_docs_related %}
+
+<table class="ietf-table ietf-doctable" style="margin-top:16px;">
+<tr><th class="doc">Related Documents</th><th class="title">Title</th><th class="date">Date</th><th class="status" colspan="2">Status</th><th class="ad">Area Director</th></tr> 
+{% for doc_group in grouped_docs_related %} 
+<tr class="header"><td colspan="6">{{doc_group.grouper}}s</td></tr>
+
+{% for doc in doc_group.list %}
+{% include "idrfc/search_result_row.html" %}
+{% endfor %}
+
+{% endfor %}
+</table>
+
 {% endblock wg_content %}
 
